# MTGTool_Export

./: .pre-commit-config.yaml  README.md  chat_for_set.py  main.py  my_db.fs  prova_request.py  pyproject.toml  run_streamlit_test.py
temp/: my_db.fs
