[project]
name = "mtgtool"
version = "0.1.0"
description = "Tool to extract create MTG queries"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mtgtools>=0.9.71",
    "pillow>=12.0.0",
    "pre-commit>=4.6.0",
    "requests>=2.32.5",
    "streamlit>=1.58.0",
    "tqdm>=4.68.2",
    "zodb>=6.1",
]
